# RG45-shoot-training

./: README.md
Code/: CMakeLists.txt  Makefile  func.c  func.cpp  func.h  func.hpp  hands.c  hands.cpp  hands.h  hands.hpp  image.c  image.cpp  image.hpp  main.c  main.cpp  rifle.c  rifle.cpp  rifle.h  rifle.hpp  shoot_training
